kubernetes/jaxrs-quarkus/jaxrs-quarkus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaxrs-quarkus
spec:
  selector:
    matchLabels:
      app: jaxrs-quarkus
  replicas: 1
  template:
    metadata:
      labels:
        app: jaxrs-quarkus
    spec:
      containers:
      - name: jaxrs-quarkus
        image: default/jaxrs-quarkus:v0.0.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            port: 8080
            path: /health/live
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 5
        readinessProbe:
          httpGet:
            port: 8080
            path: /health/ready
          initialDelaySeconds: 3
          periodSeconds: 3
