kubernetes/jaxrs-quarkus/jaxrs-quarkus-service-externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaxrs-quarkus-monitoring
  namespace: monitoring
spec:
  type: ExternalName
  externalName: jaxrs-quarkus.default.svc.cluster.local
