kubernetes/jaxrs-quarkus/jaxrs-quarkus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaxrs-quarkus
spec:
  type: ClusterIP
  selector:
    app: jaxrs-quarkus
  ports:
  - protocol: TCP
    port: 8080
