kubernetes/jaxrs-quarkus/jaxrs-quarkus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jaxrs-quarkus
spec:
  rules:
  - host: quarkus.minikube
    http:
      paths:
      - path:
        backend:
          serviceName: jaxrs-quarkus
          servicePort: 8080
      - path: /random
        backend:
          serviceName: randompublish-quarkus
          servicePort: 8080
